--- a/index.html
+++ b/index.html
@@ -12,14 +12,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400&family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 
   <!--link para bootstrap-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -27,8 +21,8 @@
   <!-- Load d3.js v5 (para el upPlot)-->
   <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
 
-  <script src="assets/js/upset.js"></script>
-  <script src="assets/js/formatData.js"></script>
+  <script src="upset.js"></script>
+  <script src="formatData.js"></script>
 
   <!-- =======================================================
   * Template Name: Laura - v2.1.0
@@ -129,7 +123,7 @@
             <div class="section-title text-center pr-5 titulo">
               <span>MOMENTOS EN QUE TOMAMOS CAFÉ</span>
               <h2>MOMENTOS EN QUE TOMAMOS CAFÉ</h2>
-              <img src="assets/img/dia.png" width="220" align="center">
+              <img src="dia.png" width="220" align="center">
             </div>
           </div>
 
@@ -169,12 +163,12 @@
           </script>
     
         <div class="container">
-          <img class='rounded float-right' src="assets/img/stat.png" width="400" style='border:solid; border-width: 0.05em; position: relative; right:3.7em; top:-28em; vertical-align: middle;'>
+          <img class='rounded float-right' src="stat.png" width="400" style='border:solid; border-width: 0.05em; position: relative; right:3.7em; top:-28em; vertical-align: middle;'>
         </div>
 
         <div class="container" id='flecha'>
           <p style="font-size: 1.5em; font-family: Josefin Sans, sans-serif; position:relative; left:1.7em; top: 1.7em">Mi combinación</p>
-          <img src="assets/img/flecha.png" width="50" style=" vertical-align: middle;">
+          <img src="flecha.png" width="50" style=" vertical-align: middle;">
         </div>
         
       </div>
@@ -203,7 +197,7 @@
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="main.js"></script>
 
    <!--para bootstrap-->
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
